<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 SuicSoft / SuiciStudios(tm).
  ~
  ~ Author : Suici Doga (suiciwd@gmail.com , suiciwd@gmail.com)  / contributors
  ~
  ~ Contact : suiciwd@gmail.com , suiciwd@outlook.com , https://gitter.im/SuicSoft/SuicSoft
  ~
  ~ Website : http://suicsoft.com , http://suicsoft.github.io
  ~
  ~ App created and programmed by SuicSoft, designed by SuiciStudios (SuicSoft).
  ~
  ~ License :
  ~
  ~
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/imgcdesc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/lpmdroid"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version" />

</LinearLayout>
